force-app/main/default/objects/ConditionChange__c/fields/PreviousArea__c.field-meta.xml
<CustomField>
    <fullName>PreviousArea__c</fullName>
    <label>面積（㎡）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>