force-app/main/default/objects/ConditionChange__c/fields/PreviousBrrowerCancelNoticeNum__c.field-meta.xml
<CustomField>
    <fullName>PreviousBrrowerCancelNoticeNum__c</fullName>
    <label>借主解約予告</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>