force-app/main/default/objects/ConditionChange__c/fields/PreviousBrrowerCancelNoticeUnit__c.field-meta.xml
<CustomField>
    <fullName>PreviousBrrowerCancelNoticeUnit__c</fullName>
    <label>借主解約予告_単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BrrowerCancelNoticeUnit</valueSetName>
    </valueSet>
</CustomField>