force-app/main/default/objects/ConditionChange__c/fields/PreviousBuildingMonth__c.field-meta.xml
<CustomField>
    <fullName>PreviousBuildingMonth__c</fullName>
    <label>築月（月）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>