force-app/main/default/objects/ConditionChange__c/fields/PreviousCancelMonthPayment__c.field-meta.xml
<CustomField>
    <fullName>PreviousCancelMonthPayment__c</fullName>
    <label>解約月賃料計算方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment</valueSetName>
    </valueSet>
</CustomField>