force-app/main/default/objects/ConditionChange__c/fields/PreviousCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>PreviousCommonCharge__c</fullName>
    <label>共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>