force-app/main/default/objects/ConditionChange__c/fields/PreviousGarage__c.field-meta.xml
<CustomField>
    <fullName>PreviousGarage__c</fullName>
    <label>(削除)旧駐車場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>