force-app/main/default/objects/ConditionChange__c/fields/PreviousLandlord5__c.field-meta.xml
<CustomField>
    <fullName>PreviousLandlord5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>貸主5</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>条件変更 (旧家主5)</relationshipLabel>
    <relationshipName>ConditionChangeLandlordRelation107</relationshipName>
    <type>Lookup</type>
</CustomField>