force-app/main/default/objects/ConditionChange__c/fields/PreviousLayoutNum__c.field-meta.xml
<CustomField>
    <fullName>PreviousLayoutNum__c</fullName>
    <label>間取_数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>