force-app/main/default/objects/ConditionChange__c/fields/PreviousOtherAmount3__c.field-meta.xml
<CustomField>
    <fullName>PreviousOtherAmount3__c</fullName>
    <label>(削除)旧その他３金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>