force-app/main/default/objects/ConditionChange__c/fields/PreviousOtherFields2__c.field-meta.xml
<CustomField>
    <fullName>PreviousOtherFields2__c</fullName>
    <label>その他2_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>