force-app/main/default/objects/ConditionChange__c/fields/PreviousOtherFields4__c.field-meta.xml
<CustomField>
    <fullName>PreviousOtherFields4__c</fullName>
    <label>その他4_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>