force-app/main/default/objects/ConditionChange__c/fields/PreviousOtherFields5__c.field-meta.xml
<CustomField>
    <fullName>PreviousOtherFields5__c</fullName>
    <label>その他5_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>