force-app/main/default/objects/ConditionChange__c/fields/PreviousOtherFieldsTaxType3__c.field-meta.xml
<CustomField>
    <fullName>PreviousOtherFieldsTaxType3__c</fullName>
    <label>その他3_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>