force-app/main/default/objects/ConditionChange__c/fields/PreviousPenalty1Cost__c.field-meta.xml
<CustomField>
    <fullName>PreviousPenalty1Cost__c</fullName>
    <label>違約金1_費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>