force-app/main/default/objects/ConditionChange__c/fields/PreviousPenalty1StartDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousPenalty1StartDate__c</fullName>
    <label>違約金1_期間始まり</label>
    <type>Date</type>
</CustomField>