force-app/main/default/objects/ConditionChange__c/fields/PreviousPenalty2EndDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousPenalty2EndDate__c</fullName>
    <label>違約金2_期間終わり</label>
    <type>Date</type>
</CustomField>