force-app/main/default/objects/ConditionChange__c/fields/PreviousPenalty3StartDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousPenalty3StartDate__c</fullName>
    <label>違約金3_期間始まり</label>
    <type>Date</type>
</CustomField>