force-app/main/default/objects/ConditionChange__c/fields/PreviousRent__c.field-meta.xml
<CustomField>
    <fullName>PreviousRent__c</fullName>
    <label>家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>