force-app/main/default/objects/ConditionChange__c/fields/PreviousSeasonVariableCost2__c.field-meta.xml
<CustomField>
    <fullName>PreviousSeasonVariableCost2__c</fullName>
    <label>季節変動費2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>