force-app/main/default/objects/ConditionChange__c/fields/PreviousSeasonVariableCost2Title__c.field-meta.xml
<CustomField>
    <fullName>PreviousSeasonVariableCost2Title__c</fullName>
    <label>季節変動費2タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>