force-app/main/default/objects/ConditionChange__c/fields/PreviousSeasonVariableCost3TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>PreviousSeasonVariableCost3TaxCategory__c</fullName>
    <label>季節変動費3税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>