force-app/main/default/objects/ConditionChange__c/fields/PreviousSecurityDeposit__c.field-meta.xml
<CustomField>
    <fullName>PreviousSecurityDeposit__c</fullName>
    <label>敷金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>