force-app/main/default/objects/ConditionChange__c/fields/PreviousStateKana__c.field-meta.xml
<CustomField>
    <fullName>PreviousStateKana__c</fullName>
    <label>住所_都道府県フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>