force-app/main/default/objects/ConditionChange__c/fields/PreviousStreetKana__c.field-meta.xml
<CustomField>
    <fullName>PreviousStreetKana__c</fullName>
    <label>住所_市区以降フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>