force-app/main/default/objects/ConditionChange__c/fields/PreviousStructure__c.field-meta.xml
<CustomField>
    <fullName>PreviousStructure__c</fullName>
    <label>構造</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Structure</valueSetName>
    </valueSet>
</CustomField>