force-app/main/default/objects/ConditionChange__c/fields/PreviousWinterPenaltyTerm__c.field-meta.xml
<CustomField>
    <fullName>PreviousWinterPenaltyTerm__c</fullName>
    <label>冬季違約金_期間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>