force-app/main/default/objects/ConditionChange__c/fields/PreviousZipCode__c.field-meta.xml
<CustomField>
    <fullName>PreviousZipCode__c</fullName>
    <label>住所_郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>