force-app/main/default/objects/ConditionChange__c/fields/RealEstateAdress__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAdress__c</fullName>
    <label>物件住所</label>
    <type>TextArea</type>
</CustomField>