force-app/main/default/objects/ConditionChange__c/fields/RealEstateAdressCity__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAdressCity__c</fullName>
    <label>住所_市区</label>
    <length>255</length>
    <type>Text</type>
</CustomField>