force-app/main/default/objects/ConditionChange__c/fields/RealEstateAdressState__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAdressState__c</fullName>
    <label>住所_都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>