force-app/main/default/objects/ConditionChange__c/fields/Reapplication1CompanyUnderstandDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1CompanyUnderstandDate__c</fullName>
    <label>再申請①企業了承日</label>
    <type>Date</type>
</CustomField>