force-app/main/default/objects/ConditionChange__c/fields/Reapplication1EmployeeContactDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1EmployeeContactDate__c</fullName>
    <label>再申請①社員連絡日</label>
    <type>Date</type>
</CustomField>