force-app/main/default/objects/ConditionChange__c/fields/Reapplication1FinanceContactContentAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1FinanceContactContentAfter__c</fullName>
    <label>再申請①経理連絡内容（承認後）</label>
    <type>TextArea</type>
</CustomField>