force-app/main/default/objects/ConditionChange__c/fields/Reapplication1InternalLinkHistory__c.field-meta.xml
<CustomField>
    <fullName>Reapplication1InternalLinkHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再申請①社内連携履歴</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>条件変更</relationshipLabel>
    <relationshipName>ReapplicationRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>