force-app/main/default/objects/ConditionChange__c/fields/Reapplication2_DecisionAcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2_DecisionAcquisitionDate__c</fullName>
    <label>再申請②決裁取得日</label>
    <type>Date</type>
</CustomField>