force-app/main/default/objects/ConditionChange__c/fields/Reapplication2CorpHDContactDateAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CorpHDContactDateAfter__c</fullName>
    <label>再申請②社宅D連絡日（承認後）</label>
    <type>Date</type>
</CustomField>