force-app/main/default/objects/ConditionChange__c/fields/Reapplication2CorpHDCorrespondenceMemo__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CorpHDCorrespondenceMemo__c</fullName>
    <label>再申請②社宅D対応メモ（申請前）</label>
    <type>TextArea</type>
</CustomField>