force-app/main/default/objects/ConditionChange__c/fields/Reapplication2CorpHDCorrespondenceMemoA__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2CorpHDCorrespondenceMemoA__c</fullName>
    <label>再申請②社宅D対応メモ（承認後）</label>
    <type>TextArea</type>
</CustomField>