force-app/main/default/objects/ConditionChange__c/fields/Reapplication2Requester__c.field-meta.xml
<CustomField>
    <fullName>Reapplication2Requester__c</fullName>
    <label>再申請②依頼者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不動産会社</fullName>
            </value>
            <value>
                <fullName>社員</fullName>
            </value>
            <value>
                <fullName>企業</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>