force-app/main/default/objects/ConditionChange__c/fields/Reapplication3FinanceAcceptDate__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3FinanceAcceptDate__c</fullName>
    <label>再申請③経理確認日（申請前）</label>
    <type>Date</type>
</CustomField>