force-app/main/default/objects/ConditionChange__c/fields/Reapplication3FinanceConfirmDateAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3FinanceConfirmDateAfter__c</fullName>
    <label>再申請③経理確認日（承認後）</label>
    <type>Date</type>
</CustomField>