force-app/main/default/objects/ConditionChange__c/fields/Reapplication3FinanceContactContentAfter__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3FinanceContactContentAfter__c</fullName>
    <label>再申請③経理連絡内容（承認後）</label>
    <type>TextArea</type>
</CustomField>