force-app/main/default/objects/ConditionChange__c/fields/Reapplication3InternalLinkHistory__c.field-meta.xml
<CustomField>
    <fullName>Reapplication3InternalLinkHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>再申請③社内連携履歴</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>条件変更 (再申請③社内連携履歴)</relationshipLabel>
    <relationshipName>ReapplicationRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>