force-app/main/default/objects/ConditionChange__c/fields/RecipientTransfer2__c.field-meta.xml
<CustomField>
    <fullName>RecipientTransfer2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>送金先2_振込手数料先方負担</label>
    <type>Checkbox</type>
</CustomField>