force-app/main/default/objects/ConditionChange__c/fields/ReconfirmReturnReason__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmReturnReason__c</fullName>
    <label>再査戻し理由</label>
    <type>Date</type>
</CustomField>