force-app/main/default/objects/ConditionChange__c/fields/ReconfirmUncheckNum__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmUncheckNum__c</fullName>
    <label>再査未チェック数</label>
    <summaryFilterItems>
        <field>ConditionChangeCheck__c.IsReconfirmMandatory__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ConditionChangeCheck__c.ReconfirmCheck__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ConditionChangeCheck__c.ConditionChange__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>