force-app/main/default/objects/ConditionChange__c/fields/RemittanceBankAccountConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceBankAccountConfirmDate__c</fullName>
    <label>送金口座確認日</label>
    <type>Date</type>
</CustomField>