force-app/main/default/objects/ConditionChange__c/fields/RenewalFeeUnit__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeUnit__c</fullName>
    <label>新更新料_単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RenewalFeeUnit</valueSetName>
    </valueSet>
</CustomField>