force-app/main/default/objects/ConditionChange__c/fields/RentApplyDate__c.field-meta.xml
<CustomField>
    <fullName>RentApplyDate__c</fullName>
    <label>新賃料で送金開始日</label>
    <type>Date</type>
</CustomField>