force-app/main/default/objects/ConditionChange__c/fields/RentConditionChange__c.field-meta.xml
<CustomField>
    <fullName>RentConditionChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>賃貸条件変更</label>
    <type>Checkbox</type>
</CustomField>