force-app/main/default/objects/ConditionChange__c/fields/RentRemittanceDestination1__c.field-meta.xml
<CustomField>
    <fullName>RentRemittanceDestination1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家賃送金先1</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>条件変更 (家賃送金先1)</relationshipLabel>
    <relationshipName>CCYdYA</relationshipName>
    <type>Lookup</type>
</CustomField>