force-app/main/default/objects/ConditionChange__c/fields/RequestStaff__c.field-meta.xml
<CustomField>
    <fullName>RequestStaff__c</fullName>
    <label>依頼担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>