force-app/main/default/objects/ConditionChange__c/fields/ResidentName__c.field-meta.xml
<CustomField>
    <fullName>ResidentName__c</fullName>
    <formula>CompanyEmployee__r.LastName + CompanyEmployee__r.FirstName</formula>
    <label>入居者名</label>
    <type>Text</type>
</CustomField>