force-app/main/default/objects/ConditionChange__c/fields/RoomNum__c.field-meta.xml
<CustomField>
    <fullName>RoomNum__c</fullName>
    <label>部屋番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>