force-app/main/default/objects/ConditionChange__c/fields/SeasonVariableCost2TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost2TaxCategory__c</fullName>
    <label>新季節変動費2課税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>