force-app/main/default/objects/ConditionChange__c/fields/SecondPostReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>SecondPostReceiptDate__c</fullName>
    <label>ポスト受領日2回目</label>
    <type>Date</type>
</CustomField>