force-app/main/default/objects/ConditionChange__c/fields/SecondPostRecipient__c.field-meta.xml
<CustomField>
    <fullName>SecondPostRecipient__c</fullName>
    <label>ポスト受領者2回目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>