force-app/main/default/objects/ConditionChange__c/fields/SecondPostSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>SecondPostSubmitDate__c</fullName>
    <label>ポスト提出日2回目</label>
    <type>Date</type>
</CustomField>