force-app/main/default/objects/ConditionChange__c/fields/SecurityDepositDifference__c.field-meta.xml
<CustomField>
    <fullName>SecurityDepositDifference__c</fullName>
    <formula>IF(
OR(
ISBLANK(PreviousSecurityDeposit__c),ISBLANK( NewSecurityDeposit__c )
), null, NewSecurityDeposit__c - PreviousSecurityDeposit__c
)</formula>
    <label>敷金差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>