force-app/main/default/objects/ConditionChange__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受付中</fullName>
            </value>
            <value>
                <fullName>内容確認中</fullName>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>対応中(精算・締結等）</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>作業中</fullName>
                <isActive>false</isActive>
                <label>作業中</label>
            </value>
            <value>
                <fullName>再査中</fullName>
                <isActive>false</isActive>
                <label>再査中</label>
            </value>
            <value>
                <fullName>契約書原本保管</fullName>
                <isActive>false</isActive>
                <label>契約書原本保管</label>
            </value>
            <value>
                <fullName>手配/依頼</fullName>
                <isActive>false</isActive>
                <label>手配/依頼</label>
            </value>
            <value>
                <fullName>新規</fullName>
                <isActive>false</isActive>
                <label>新規</label>
            </value>
            <value>
                <fullName>書類締結</fullName>
                <isActive>false</isActive>
                <label>書類締結</label>
            </value>
            <value>
                <fullName>条件確認/調整</fullName>
                <isActive>false</isActive>
                <label>条件確認/調整</label>
            </value>
            <value>
                <fullName>決裁申請/承認</fullName>
                <isActive>false</isActive>
                <label>決裁申請/承認</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>