force-app/main/default/objects/ConditionChange__c/fields/TermsChangeApplicationOther__c.field-meta.xml
<CustomField>
    <fullName>TermsChangeApplicationOther__c</fullName>
    <label>条件変更申請_その他</label>
    <type>TextArea</type>
</CustomField>