force-app/main/default/objects/ConditionChange__c/fields/WinterPenaltyCost__c.field-meta.xml
<CustomField>
    <fullName>WinterPenaltyCost__c</fullName>
    <label>新冬季違約金_費用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>