force-app/main/default/objects/ConditionChange__c/fields/WinterPenaltyTerm__c.field-meta.xml
<CustomField>
    <fullName>WinterPenaltyTerm__c</fullName>
    <label>新冬季違約金_期間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>