force-app/main/default/objects/ConditionChange__c/fields/WorkArrangeRequest__c.field-meta.xml
<CustomField>
    <fullName>WorkArrangeRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>作業手配依頼書</label>
    <type>Checkbox</type>
</CustomField>