force-app/main/default/objects/ConditionChange__c/recordTypes/DecisionNecessary.recordType-meta.xml
<RecordType>
    <fullName>DecisionNecessary</fullName>
    <active>true</active>
    <label>決裁必要</label>
</RecordType>