force-app/main/default/objects/ConditionChange__c/recordTypes/DecisionUnnecessary.recordType-meta.xml
<RecordType>
    <fullName>DecisionUnnecessary</fullName>
    <active>true</active>
    <label>決裁不要</label>
</RecordType>