force-app/main/default/objects/ConditionChange__c/validationRules/ApprovalCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovalCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsApprovalLock__c = true,
NOT(
ISCHANGED(IsApprovalLock__c)
)
)</errorConditionFormula>
    <errorMessage>決裁申請中のためレコード更新不可</errorMessage>
</ValidationRule>