force-app/main/default/objects/ConditionChange__c/validationRules/MonthlyVariableCost2TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>MonthlyVariableCost2TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK  ( MonthlyVariableCost2Title__c )) , ISBLANK( TEXT( MonthlyVariableCost2TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>MonthlyVariableCost2TaxCategory__c</errorDisplayField>
    <errorMessage>月次変動費2課税区分を入力してください</errorMessage>
</ValidationRule>