force-app/main/default/objects/ConditionChange__c/validationRules/MonthlyVariableCost3TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>MonthlyVariableCost3TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK  ( MonthlyVariableCost3Title__c )) , ISBLANK( TEXT( MonthlyVariableCost3TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>MonthlyVariableCost3TaxCategory__c</errorDisplayField>
    <errorMessage>月次変動費3課税区分を入力してください</errorMessage>
</ValidationRule>