force-app/main/default/objects/ConditionChange__c/validationRules/MonthlyVariableCost4TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>MonthlyVariableCost4TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK  ( MonthlyVariableCost4Title__c )) , ISBLANK( TEXT( MonthlyVariableCost4TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>MonthlyVariableCost4TaxCategory__c</errorDisplayField>
    <errorMessage>月次変動費4課税区分を入力してください</errorMessage>
</ValidationRule>