force-app/main/default/objects/ConditionChange__c/validationRules/MonthlyVariableCost5TaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>MonthlyVariableCost5TaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK  ( MonthlyVariableCost5Title__c )) , ISBLANK( TEXT( MonthlyVariableCost5TaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>MonthlyVariableCost5TaxCategory__c</errorDisplayField>
    <errorMessage>月次変動費5課税区分を入力してください</errorMessage>
</ValidationRule>