force-app/main/default/objects/ConditionChange__c/validationRules/NewGarageTaxType.validationRule-meta.xml
<ValidationRule>
    <fullName>NewGarageTaxType</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewGarage__c )) , ISBLANK( TEXT( NewGarageTaxType__c ) ) )</errorConditionFormula>
    <errorDisplayField>NewGarageTaxType__c</errorDisplayField>
    <errorMessage>新駐車場税区分を入力してください</errorMessage>
</ValidationRule>