force-app/main/default/objects/ConditionChange__c/validationRules/OtherFieldsTaxType1.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherFieldsTaxType1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOtherAmount1__c )) , ISBLANK( TEXT( OtherFieldsTaxType1__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherFieldsTaxType1__c</errorDisplayField>
    <errorMessage>新その他1_税区分を入力してください</errorMessage>
</ValidationRule>