force-app/main/default/objects/ConditionChange__c/validationRules/OtherFieldsTaxType2.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherFieldsTaxType2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOtherAmount2__c )) , ISBLANK( TEXT( OtherFieldsTaxType2__c ) ) )</errorConditionFormula>
    <errorDisplayField>OtherFieldsTaxType2__c</errorDisplayField>
    <errorMessage>新その他2_税区分を入力してください</errorMessage>
</ValidationRule>