force-app/main/default/objects/ConditionChange__c/validationRules/OtherFieldsTaxType3.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherFieldsTaxType3</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOtherAmount3__c )) , ISBLANK( TEXT( OtherFieldsTaxType3__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherFieldsTaxType3__c</errorDisplayField>
    <errorMessage>新その他3_税区分を入力してください</errorMessage>
</ValidationRule>