force-app/main/default/objects/ConditionChange__c/validationRules/OtherFieldsTaxType4.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherFieldsTaxType4</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOtherAmount4__c )) , ISBLANK( TEXT( OtherFieldsTaxType4__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherFieldsTaxType4__c</errorDisplayField>
    <errorMessage>新その他4_税区分を入力してください</errorMessage>
</ValidationRule>