force-app/main/default/objects/ConditionChange__c/validationRules/OtherFieldsTaxType5.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherFieldsTaxType5</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( NewOtherAmount5__c )) , ISBLANK( TEXT( OtherFieldsTaxType5__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherFieldsTaxType5__c</errorDisplayField>
    <errorMessage>新その他5_税区分を入力してください</errorMessage>
</ValidationRule>